--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.2",
   "private": true,
   "dependencies": {
-    "@slashauth/slashauth-react": "^0.2.12",
+    "@slashauth/slashauth-react": "^0.6.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "check-peer-dependencies": "^4.1.0"
   }
 }
